# falsealarm

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-MIT  README.md  falsealarm.db-shm  falsealarm.db-wal  pyproject.toml  requirements.txt  targets.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
engine-go/: dirfuzz.go  go.mod  go.sum  main.go
falsealarm/: __init__.py  __main__.py  cli.py
falsealarm/core/: __init__.py  config.py  db.py  engine.py  fingerprint.py  logger.py  output.py  proxy.py  rate_limiter.py  scheduler.py  utils.py
falsealarm/core/ai/: __init__.py  base_provider.py  gemini_provider.py
falsealarm/data/: tech_signatures.json  user_agents.txt
falsealarm/data/templates/: aws-keys.yaml  cve-2021-41773.yaml  env-exposure.yaml  git-exposure.yaml
falsealarm/data/wordlists/: common_dirs.txt  subdomains_top1k.txt
falsealarm/modules/: __init__.py  base.py  cors.py  dirfuzz.py  dns_enum.py  headers_ssl.py  httpprobe.py  js_analysis.py  portscan.py  subdomain.py  techdetect.py  vulnscan.py  wayback.py  websocket.py
tests/: test_rate_limiter.py
